Upgrade to new Facebook sdk 3.6.0